--- a/requirements.txt
+++ b/requirements.txt
@@ -1,222 +1,36 @@
-absl-py==1.0.0
-alembic==1.8.0
-analytics-python==1.4.0
-anyio==3.6.1
-appnope @ file:///opt/concourse/worker/volumes/live/6ca6f098-d773-4461-5c91-a24a17435bda/volume/appnope_1606859448531/work
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-attrs==21.4.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1620866417880/work
-awscli==1.22.13
-Babel==2.10.1
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backoff==1.10.0
-bcrypt==3.2.0
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1631874778482/work
-bleach==5.0.0
-boto3 @ file:///tmp/build/80754af9/boto3_1629142476879/work
-botocore==1.23.13
-Bottleneck @ file:///opt/concourse/worker/volumes/live/ac8c8ef3-2ed0-42e9-6ec0-5bb05ad938f6/volume/bottleneck_1607575111469/work
 brotlipy==0.7.0
-cachetools==5.0.0
 certifi==2022.5.18.1
-cffi @ file:///opt/concourse/worker/volumes/live/976f8942-f51d-4f0e-7352-2a10f0820d0e/volume/cffi_1625814703974/work
-chardet @ file:///opt/concourse/worker/volumes/live/7e1102c4-8702-40f2-63d6-f260ce5f85e4/volume/chardet_1607706831384/work
-Christmas-Gifts==0.0.1
-click==8.0.3
-click-default-group==1.2.2
-cloudpickle==2.1.0
-cloup==0.7.1
-colorama==0.4.3
-colour==0.1.5
-commonmark==0.9.1
-conda==4.13.0
-conda-package-handling @ file:///opt/concourse/worker/volumes/live/8fb3e065-760b-4a9d-4cd9-aca7fc8baf53/volume/conda-package-handling_1618262145611/work
-cryptography @ file:///opt/concourse/worker/volumes/live/d5dda287-c0b3-4861-7262-fab05baa64dc/volume/cryptography_1616769284011/work
-cycler==0.10.0
-Cython==0.29.26
-databricks-cli==0.16.7
-debugpy @ file:///opt/concourse/worker/volumes/live/1a15daf1-2a67-4a51-6aa1-c3bca01f7577/volume/debugpy_1629222706040/work
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml==0.7.1
-distro==1.6.0
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.15.2
-entrypoints==0.3
+cffi==1.15.0
+charset-normalizer==2.0.4
+click==8.0.4
+cryptography==37.0.1
 enum-compat==0.0.3
-et-xmlfile==1.1.0
-fastjsonschema==2.15.3
-finite-element-course==2018.0
-flake8 @ file:///tmp/build/80754af9/flake8_1620776156532/work
-Flask==2.1.2
-fonttools==4.25.0
-future @ file:///opt/concourse/worker/volumes/live/f456638c-86a7-4060-7f5f-d499a051219b/volume/future_1607571337593/work
-geographiclib==1.52
-geopy==2.2.0
-gitdb==4.0.9
-GitPython==3.1.27
-glcontext==2.3.4
-gmpy2==2.0.8
-google-auth==2.6.3
-google-auth-oauthlib==0.4.6
-greenlet @ file:///opt/concourse/worker/volumes/live/b27b4e9e-4697-4d57-403b-f82d36a391ca/volume/greenlet_1628888146890/work
-grpcio==1.44.0
-gunicorn==20.1.0
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imbalanced-learn==0.9.0
-imblearn==0.0
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/b1c84e32-1519-4554-50d3-980dc7c220d9/volume/importlib-metadata_1631916711680/work
-ipykernel @ file:///opt/concourse/worker/volumes/live/2a3b1990-854f-4397-41a0-fec023f049c2/volume/ipykernel_1629995120059/work/dist/ipykernel-6.2.0-py3-none-any.whl
-ipython @ file:///opt/concourse/worker/volumes/live/77d2c480-c063-4023-54e0-59e22222e467/volume/ipython_1632141408854/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets==7.7.0
-isosurfaces==0.1.0
-itsdangerous==2.1.2
-jedi @ file:///opt/concourse/worker/volumes/live/4b03e428-2d0c-4635-502c-16df884971e8/volume/jedi_1611333763457/work
-Jinja2==3.1.2
-jmespath @ file:///Users/ktietz/demo/mc3/conda-bld/jmespath_1630583964805/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-json5==0.9.8
-jsonschema==3.2.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1630690655192/work
-jupyter-core @ file:///opt/concourse/worker/volumes/live/d225f67f-0726-47b9-4510-c6aff5625ca4/volume/jupyter_core_1612213300495/work
-jupyter-server==1.17.0
-jupyterlab==3.4.2
-jupyterlab-pygments==0.2.2
-jupyterlab-server==2.13.0
-jupyterlab-widgets==1.0.2
-kiwisolver @ file:///opt/concourse/worker/volumes/live/f8867fdb-2fa2-4145-73d9-4d6f6dad5f7c/volume/kiwisolver_1612282424136/work
-Mako==1.2.0
-manim==0.13.1
-ManimPango==0.3.1
-mapbox-earcut==0.12.11
-Markdown==3.3.6
-MarkupSafe==2.1.1
-matplotlib @ file:///opt/concourse/worker/volumes/live/ea31f923-d5bd-4af7-6d95-b910b4a0fa5f/volume/matplotlib-suite_1628011455335/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mccabe==0.6.1
-mistune==0.8.4
-mitoinstaller==0.0.158
-mitosheet==0.1.424
-mkl-fft==1.3.0
-mkl-random @ file:///opt/concourse/worker/volumes/live/0cda23d8-7460-44b2-7e5d-3c76a8a0ca7e/volume/mkl_random_1626186083266/work
+future==0.18.2
+idna==3.3
+joblib==1.1.0
+mkl-fft==1.3.1
+mkl-random==1.2.2
 mkl-service==2.4.0
-mlflow==1.26.1
-moderngl==5.6.4
-moderngl-window==2.4.1
-monotonic==1.6
-mpmath==1.2.1
-multipledispatch==0.6.0
-munkres==1.1.4
-nbclassic==0.3.7
-nbclient==0.6.3
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx==2.6.3
 nltk==3.7
-notebook==6.4.11
-notebook-shim==0.1.0
-numexpr @ file:///opt/concourse/worker/volumes/live/8a490d79-0e07-4fed-40fc-a78f896e4811/volume/numexpr_1618856522733/work
-numpy @ file:///opt/concourse/worker/volumes/live/9909a8d0-9b8e-44eb-6059-6c668078c029/volume/numpy_and_numpy_base_1626271794641/work
-oauthlib==3.2.0
-olefile @ file:///Users/ktietz/demo/mc3/conda-bld/olefile_1629805411829/work
-openpyxl==3.0.9
+numpy==1.22.3
 packaging==21.3
-pandas==1.3.3
-pandocfilters==1.5.0
-paramiko==2.9.2
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///opt/concourse/worker/volumes/live/140f8506-0993-42b0-466b-ccbbcb5df83e/volume/pillow_1625655825783/work
-plotly==5.3.0
-prometheus-client==0.14.1
-prometheus-flask-exporter==0.20.2
-prompt-toolkit @ file:///Users/ktietz/demo/mc3/conda-bld/prompt-toolkit_1629146841569/work
-protobuf==3.20.0
-psutil==5.9.1
-psycopg2 @ file:///opt/concourse/worker/volumes/live/7541fe58-2a45-4073-5d69-313e733fc729/volume/psycopg2_1612298592535/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.20.1
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1615748559966/work
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydub==0.25.1
-pyflakes @ file:///tmp/build/80754af9/pyflakes_1617200973297/work
-pyglet==1.5.21
-Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
-PyJWT==2.4.0
-PyNaCl==1.5.0
-pyobjc-core==8.1
-pyobjc-framework-Cocoa==8.1
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrr==0.10.3
-pyrsistent==0.18.1
-PySocks @ file:///opt/concourse/worker/volumes/live/112288ac-9cb0-4e73-768b-13baf4ca6419/volume/pysocks_1605305820043/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-dotenv==0.19.2
-pytz==2021.3
-PyYAML==5.4.1
-pyzmq @ file:///opt/concourse/worker/volumes/live/a6b770e2-97ff-4d20-790a-688be9a9004f/volume/pyzmq_1628276022869/work
-querystring-parser==1.2.4
-regex==2022.4.24
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-requests-oauthlib==1.3.1
-rich==10.16.1
-rsa==4.7.2
-ruamel-yaml-conda @ file:///opt/concourse/worker/volumes/live/e81cf0fe-611a-498e-6e69-a7320057c1ac/volume/ruamel_yaml_1616016689696/work
-s3transfer @ file:///tmp/build/80754af9/s3transfer_1626435152308/work
-scikit-learn==1.0.2
-scipy @ file:///opt/concourse/worker/volumes/live/8e481b15-67b8-4160-7a8b-26cd6e8fe54f/volume/scipy_1630606804826/work
-screeninfo==0.6.7
-seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
-selenium @ file:///opt/concourse/worker/volumes/live/9dcbb584-e669-4c23-547e-fda41ecd267d/volume/selenium_1614267791101/work
-Send2Trash==1.8.0
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-skia-pathops==0.7.2
-smmap==5.0.0
-sniffio==1.2.0
-sns==0.1
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
-SQLAlchemy @ file:///opt/concourse/worker/volumes/live/454d700c-0b8b-469e-7add-023d0df6ee3d/volume/sqlalchemy_1626948440911/work
-sqlparse==0.4.2
-srt==3.5.0
-sympy @ file:///opt/concourse/worker/volumes/live/5ed26665-a223-4942-7dc1-66b2b3830ab1/volume/sympy_1635237064989/work
-tabulate==0.8.9
-tenacity==8.0.1
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-termcolor==1.1.0
-terminado==0.15.0
-texttable==1.6.4
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tinycss2==1.1.1
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-torch==1.10.2
+Pillow==9.0.1
+pip==21.2.4
+psutil==5.8.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PySocks==1.7.1
+regex==2022.3.15
+requests==2.27.1
+setuptools==61.2.0
+six==1.16.0
+torch==1.11.0
 torch-model-archiver==0.6.0
-torch-tb-profiler==0.4.0
-torch-workflow-archiver==0.2.4
-torchaudio==0.10.2
+torchaudio==0.11.0
 torchserve==0.6.0
-torchvision==0.2.2
-tornado @ file:///opt/concourse/worker/volumes/live/2c1a63a2-006b-48ee-56b9-0cfe8b4927f9/volume/tornado_1606942321278/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1625563689033/work
-traitlets==5.2.1.post0
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
-watchdog==2.1.6
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client==0.59.0
-Werkzeug==2.1.1
-widgetsnbextension==3.6.0
-XlsxWriter==3.0.2
-zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
+torchvision==0.12.0
+tqdm==4.64.0
+typing_extensions==4.1.1
+urllib3==1.26.9
+wheel==0.37.1
