--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
 brotlipy==0.7.0
+cachetools==5.2.0
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.4
 click==8.0.4
 cryptography==37.0.1
 enum-compat==0.0.3
+finite-element-course==2018.0
 future==0.18.2
+google-api-core==2.8.2
+google-auth==2.9.0
+google-cloud-aiplatform==1.15.0
+google-cloud-bigquery==2.34.4
+google-cloud-core==2.3.1
+google-cloud-resource-manager==1.5.1
+google-cloud-storage==2.4.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.3
+grpc-google-iam-v1==0.12.4
+grpcio==1.47.0
+grpcio-status==1.47.0
 idna==3.3
 joblib==1.1.0
 mkl-fft==1.3.1
@@ -16,13 +31,19 @@ numpy==1.22.3
 packaging==21.3
 Pillow==9.0.1
 pip==21.2.4
+proto-plus==1.20.6
+protobuf==3.20.1
 psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
 PySocks==1.7.1
+python-dateutil==2.8.2
 regex==2022.3.15
 requests==2.27.1
+rsa==4.8
 setuptools==61.2.0
 six==1.16.0
 torch==1.11.0
