--- a/deployment/config.properties
+++ b/deployment/config.properties
@@ -1,3 +1,9 @@
 inference_address=http://0.0.0.0:8080
 management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
+# cors_allowed_origin is required to enable CORS, use '*' or your domain name
+cors_allowed_origin=https://tajpatel-portfolio.co.uk
+# required if you want to use preflight request
+cors_allowed_methods=GET, POST, PUT, OPTIONS
+# required if the request has an Access-Control-Request-Headers header
+cors_allowed_headers=X-Custom-Header
